# minirend

./: .clang-format  .dir-locals.el  .gitmodules  CMakeLists.txt  readme.md
examples/: CMakeLists.txt  triangle.cpp
examples/resources/: flat.frag  flat.vert
include/: app.hpp  display.hpp  minirend.hpp  renderable.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  app.cpp  display.cpp  renderable.cpp
